# cursed-rl-quad

./: .gitignore  AGENTS.md  README.md  TODO.md  cfg_default.yaml  cfg_smoketest.yaml  main.py  pyproject.toml
docs/plans/: cycle_review_notes.md  metrics_logging_plan.md  staged_training_plan.md
docs/runs/: 2026-01-16-run-notes.md  2026-01-17-run-notes.md  2026-01-17-viz-refactor-summary.md
scripts/: eval.sh  scrape_docs.py  tensorboard.sh  train.sh
src/simhops/: __init__.py  evaluate.py  logging.py  train.py
src/simhops/config/: __init__.py  config.py  schema.py
src/simhops/core/: __init__.py  quadcopter.py  sensors.py
src/simhops/envs/: __init__.py  quadcopter_env.py
src/simhops/train/: __init__.py  __main__.py  metrics.py  trainer.py
src/simhops/train/callbacks/: __init__.py  eval_checkpoint_callback.py  metrics_callback.py  rerun_callback.py  reward_callback.py  snapshot_callback.py
src/simhops/viz/: __init__.py  env_logger.py  rerun_viz.py  training_logger.py
